[package]
name = "machine-coding-questions"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
